--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
                             Inicio de sesion
                         </div>
                         <div class="card-body">
-                            <form method="POST" action="user.html">
+                            <form method="POST" action="/user.html">
                                 <div class="row">
                                   
                                     <div class="col-6 form-group">
