--- a/user.html
+++ b/user.html
@@ -65,7 +65,7 @@
         <div class="row" style="padding-top:2%">
             
              <div class="col col-lg-4 col-md-4 col-sm-6" style="padding-bottom:2%">
-                <div class="card text-center" style="">
+                <div class="card text-center">
                     <img class="card-img-top" src="images/reserva.jpg" alt="Card image cap">
                     <div class="card-body">
                         <a href="reservar.html" class="btn btn-primary">COMPRA O RESERVA</a>
@@ -81,7 +81,7 @@
                 </div>
              </div>
              <div class="col col-lg-4 col-md-4 col-sm-6" style="padding-bottom:2%">
-                 <div class="card text-center" style="">
+                 <div class="card text-center">
                     <img class="card-img-top" src="images/tracking.jpg" alt="Card image cap">
                     <div class="card-body">
                         <a href="tracking.html" class="btn btn-primary">TRACKING Y RUTAS</a>
@@ -89,7 +89,7 @@
                 </div>
              </div>
              <div class="col col-lg-4 col-md-4 col-sm-6" style="padding-bottom:2%">
-                <div class="card text-center" style="">
+                <div class="card text-center">
                     <img class="card-img-top" src="images/region.jpg" alt="Card image cap">
                     <div class="card-body">
                         <a href="itinerario.html" class="btn btn-primary">ITINERARIO</a>
@@ -97,7 +97,7 @@
                 </div>
              </div>
              <div class="col col-lg-4 col-md-4 col-sm-6" style="padding-bottom:2%">
-                <div class="card text-center" style="">
+                <div class="card text-center">
                     <img class="card-img-top" src="images/region.jpg" alt="Card image cap">
                     <div class="card-body">
                         <a href="ofertas.html" class="btn btn-primary">VIAJES</a>
@@ -105,7 +105,7 @@
                 </div>
              </div>
              <div class="col col-lg-4 col-md-4 col-sm-6" style="padding-bottom:2%">
-                 <div class="card text-center" style="">
+                 <div class="card text-center">
                     <img class="card-img-top" src="images/region.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Medios de pago</h5>
