--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
                                     </div>
                                     <div class="col-6 form-group">
                                         <label for="origen">Contraseña</label>
-                                        <input type="text" class="form-control" name="contrase" id="contraseña" placeholder="Contraseña" required>
+                                        <input type="password" class="form-control" name="contrase" id="contraseña" placeholder="Contraseña" required>
                                    
                                    </div>
                                     
