--- a/reservar.html
+++ b/reservar.html
@@ -79,7 +79,7 @@
                             Compra y Reserva de boletos
                         </div>
                         <div class="card-body">
-                            <form>
+                            <form method="POST" action="/servicios.html">
                                 <div class="row">
                                     <div class="col-6 form-group">
                                         <label for="origen">* Origen</label>
@@ -135,7 +135,7 @@
                                         <label for="tlf">Numero de teléfono</label>
                                       <input type="tel" class="form-control" id="tlf" placeholder="Telefono" onchange="ValidaTelefono(this.value)" required>
                                     </div>
-                                    <button type="button" class="btn btn-primary btn-lg btn-block">Reservar/Comprar</button>
+                                    <button type="submit" class="btn btn-primary btn-lg btn-block">Reservar/Comprar</button>
 									<a href="user.html" class="btn btn-danger btn-lg btn-block">Regresar al área de usuario</a>
                                    
                                     <p>*Datos obligatorios</p>
