--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
                                   
                                     <div class="col-6 form-group">
                                         <label for="nombres">Nombre</label>
-                                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre">
+                                        <input type="email" class="form-control" name="nombre" id="nombre" placeholder="Nombre">
                                     </div>
                                     <div class="col-6 form-group">
                                         <label for="origen">Contraseña</label>
