--- a/user.html
+++ b/user.html
@@ -17,9 +17,19 @@
 
     <div class="container-fluid">
            <!-- Logo principal -->
-        <div class="row">
-            <div class="col-sm bg-light">
-                <img alt="Aqui va el logo" src="images/logo.jpg">
+           <div class="row">
+            <div class="col-sm-4 bg-white text-right">
+                <a href="#" style="color: black; padding-right: 3%"><i class="fab fa-facebook fa-2x" style="margin-top: 20%"></i></a>
+                <a href="#" style="color: black; padding-right: 3%"><i class="fab fa-twitter fa-2x" style="margin-top: 20%"></i></a>
+                <a href="#" style="color: black"><i class="fab fa-instagram fa-2x" style="margin-top: 20%"></i></a>
+            </div>
+            <div class="col-sm-4 bg-white text-center">
+                <img alt="Aqui va el logo" src="images/5.jpg"width="300" height="200">
+            </div>
+            <div class="col-sm-4 bg-white">                
+                <a href="#" style="color: black; padding-right: 3%"><i class="fab fa-youtube fa-2x" style="margin-top: 20%"></i></a>
+                <a href="#" style="color: black; padding-right: 3%"><i class="fab fa-google-plus fa-2x" style="margin-top: 20%"></i></a>
+                <a href="#" style="color: black"><i class="fas fa-envelope fa-2x" style="margin-top: 20%"></i></a>
             </div>
         </div>
           <!-- Menu principal -->
