--- a/reservar.html
+++ b/reservar.html
@@ -79,7 +79,7 @@
                             Compra y Reserva de boletos
                         </div>
                         <div class="card-body">
-                            <form method="POST" action="/servicios.html">
+                            <form method="POST" action="/index.html">
                                 <div class="row">
                                     <div class="col-6 form-group">
                                         <label for="origen">* Origen</label>
@@ -131,10 +131,7 @@
                                         <label for="fecha">* Fecha de viaje</label>
                                         <input type="date" name="fecha" class="form-control" id="fecha" placeholder="fecha" required>
                                     </div>
-                                    <div class="col-6 form-group">
-                                        <label for="cedula">Id del Cliente</label>
-                                        <input type="text" name="cedula" class="form-control" id="cedula" placeholder="Cedula" >
-                                    </div>
+                                    
 									<div class="col-6 form-group">
                                         <label for="NroPasaje">Número del Pasaje</label>
                                         <input type="text" name="nroPasaje" class="form-control" id="nroPasaje" placeholder="nroPasaje" >
