--- a/tracking.html
+++ b/tracking.html
@@ -79,12 +79,13 @@
                             Tracking de unidades
                         </div>
                         <div class="card-body">
-                            <form>
+                            <form method="post" action="/data2">
                                 <div class="row">
                                     <div class="col-12 form-group">
                                         <label for="tracking">* Número de la unidad de transporte (el número se encuentra en su boleto)</label>
-                                        <input type="text" class="form-control" id="trackid" placeholder="Número unidad" onchange="ValidaNum(this.value)" required>
+                                        <input type="text" class="form-control" id="trackid" name="trackid" placeholder="Número unidad" onchange="ValidaNum(this.value)" required>
                                     </div>
+                                     <!--
                                      <div class="col-12 form-group">
                                         <label for="origen">Origen</label>
                                         <input type="text" class="form-control" id="origen" placeholder="Origen">
@@ -93,7 +94,8 @@
                                         <label for="destino">Destino</label>
                                         <input type="text" class="form-control" id="destino" placeholder="Destino">
                                     </div>
-                                    <button type="button" class="btn btn-primary btn-lg btn-block">Rastrear</button>
+                                    -->
+                                    <button type="submit" class="btn btn-primary btn-lg btn-block">Rastrear</button>
 									<a href="user.html" class="btn btn-danger btn-lg btn-block">Regresar al área de usuario</a>
                                    
                                     <p>*Datos obligatorios</p>
@@ -133,8 +135,7 @@
 //comprueba campo teléfono de formulario
 //usa el metodo test de expresion regular
 
-        if(/[0-9]\d{5}/.test(nv)){
-        /*alert("El número es correcto.");*/
+     /*   if(/[0-9]\d{5}/.test(nv)){
         return (true);
         }
         else
@@ -142,7 +143,7 @@
         alert('Por favor ingrese un numero valido');
         return false; //no submit
         }
-
+*/
     }
     </script>
 
